<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:id="@+id/view"
        android:layout_width="62dp"
        android:layout_height="7dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="@drawable/bg_bottom_sheet_rect" />

    <TextView
        android:id="@+id/btn_edit"
        style="@style/actionStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginVertical="@dimen/normal_margin"
        android:text="@string/action_edit"
        app:drawableStartCompat="@drawable/ic_edit_24" />

    <TextView
        android:id="@+id/btn_delete"
        style="@style/actionStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginVertical="@dimen/normal_margin"
        android:text="@string/action_delete"
        app:drawableStartCompat="@drawable/ic_delete_24" />


    <TextView
        android:id="@+id/btn_copy"
        style="@style/actionStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/normal_margin"
        android:text="@string/action_copy"
        app:drawableStartCompat="@drawable/ic_copy_24" />

</LinearLayout>